--- a/singlestagefitresults-deck/package.json
+++ b/singlestagefitresults-deck/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-typescript": "8.2.1",
     "@rollup/plugin-url": "6.0.0",
     "@spinnaker/eslint-plugin": "1.0.13",
+    "@spinnaker/core": "0.0.479",
     "@types/react": "16.8.25",
     "@typescript-eslint/eslint-plugin": "4.4.0",
     "@typescript-eslint/parser": "4.4.0",
